package poderes;
// las interfaces son plantillas que nos permiten definir Types que tienen un
// comportamiento comun, pero que no tienen implementación
// es decir, solo se declara el nombre (signature) del comportamiento
// pero no se implementa, es decir no tiene código
// las interfaces también pueden tener definiciones de atributos static
public interface IPower {
    void dispararPoder();
}