package poderes;

public class PoderFuego implements IPower {
    @Override
    public void dispararPoder() {
        System.out.println(" 🔥🔥🔥🔥🔥🔥🔥🔥");
    }
}
