package poderes;

public class PoderFuerza implements IPower {
    @Override
    public void dispararPoder() {
        System.out.println(" 💪💪💪💪💪💪💪"); 
    }
}
