package poderes;

public class PoderTelepatía implements IPower {
    @Override
    public void dispararPoder() {
        System.out.println("🧠🧠🧠🧠🧠🧠🧠🧠");
    }
}
