package poderes;

public class PoderTormenta implements IPower {
    public PoderTormenta() {
    }

    @Override
    public void dispararPoder() {
        System.out.println("⛈️⛈️⛈️⛈️⛈️⛈️⛈️");
    }
}





