package poderes;

public class PoderVelocidad implements IPower {
    public PoderVelocidad() {
    }

    @Override
    public void dispararPoder() {
        System.out.println("⚡⚡⚡⚡⚡⚡⚡⚡");
    }
}






